--- a/facturas_femase/mantenedorClientes/templates/adminTemp/actualizarFactura.html
+++ b/facturas_femase/mantenedorClientes/templates/adminTemp/actualizarFactura.html
@@ -1,9 +1,9 @@
-{% extends '../base.html' %} {% block title %} Actualizar Cliente
+{% extends '../base.html' %} {% block title %} Actualizar factura
 {% endblock %} {% block content %}
 
 <div class="container-fluid my-4">
   <div class="card p-4">
-    <div class="display-6">Actualizar cliente</div>
+    <div class="display-6">Actualizar factura</div>
     <form method="post">
       {% csrf_token %}
       <div class="row gap-4 mt-4">
