--- a/facturas_femase/mantenedorClientes/templates/adminTemp/clientes.html
+++ b/facturas_femase/mantenedorClientes/templates/adminTemp/clientes.html
@@ -1,50 +1,20 @@
 {% extends '../base.html' %} {% block title %} Mantenedor Clientes 
 {% endblock %} {% block content %}
 
-<nav class="navbar navbar-expand-lg bg-primary h6" data-bs-theme="dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'dashboard' %}">FEMASE</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'dashboard' %}">Inicio</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Mantenedores
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'clientes' %}">Clientes</a></li>
-            <li><a class="dropdown-item" href="#">Usuarios</a></li>
-          </ul>
-        </li>
-      </ul>
-      <button class="btn btn-danger text-white"><a href="{% url 'logout' %}">Cerrar sesion</a></button>
-    </div>
-  </div>
-</nav>
-
 <div class="container-fluid my-4">
   <div class="card p-4">
-    <div class="display-6">Clientes</div>
-    <table class="table mt-4 table-hover">
+    <div class="d-flex">
+      <div class="display-6 flex-fill">Clientes</div>
+      <button
+      data-bs-toggle="modal"
+      data-bs-target="#exampleModal"
+      class="btn btn-primary"
+      >
+        Agregar cliente
+      </button>
+    </div>
+    <hr class="my-4">
+    <table class="table table-bordered text-center">
       <thead>
         <tr>
           <th scope="col">RUT</th>
@@ -74,7 +44,7 @@
           <td>{{ cliente.correoContacto1}}</td>
           <td>{{ cliente.correoContacto2}}</td>
           <td>
-            <div class="d-flex gap-2">
+            <div class="d-flex gap-2 justify-content-center">
               <button class="btn btn-primary">
                 <a href="{% url 'actualizarCliente' cliente.id %}">
                   <svg
@@ -99,16 +69,6 @@
         {% endfor %}
       </tbody>
     </table>
-  </div>
-
-  <div class="bottom-0 translate-middle end-0 position-absolute">
-    <button
-      data-bs-toggle="modal"
-      data-bs-target="#exampleModal"
-      class="btn btn-primary btn-lg"
-    >
-      +
-    </button>
   </div>
 
   <div
