--- a/facturas_femase/mantenedorClientes/templates/adminTemp/clientes.html
+++ b/facturas_femase/mantenedorClientes/templates/adminTemp/clientes.html
@@ -1,6 +1,32 @@
 {% extends '../base.html' %} {% block title %} Mantenedor Clientes 
 {% endblock %} {% block content %}
 
+
+{% if success %}
+<div class="container mt-4 text-center">
+
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    Cliente agregado correctamente!
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+</div>
+
+{% endif %}
+
+
+
+{% if error %}
+<div class="container mt-4 text-center">
+
+  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    El registro ya existe
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+</div>
+
+{% endif %}
+
+
 <div class="container-fluid my-4">
   <div class="card p-4">
     <div class="d-flex">
@@ -60,9 +86,25 @@
                 </svg>
                 </a>
               </button>
-              <button class="btn btn-danger">
+              <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/></svg>
               </button>
+              <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h1 class="modal-title fs-5" id="exampleModalLabel">Seguro que deseas eliminar el cliente</h1>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
+                      <form action="{% url 'eliminarCliente' cliente.id %}" method="post">
+                        {% csrf_token %}
+                        <button class="btn btn-danger">Eliminar</button>
+                      </form>
+                    </div>
+                  </div>
+                </div>
             </div>
           </td>
         </tr>
