--- a/facturas_femase/mantenedorClientes/templates/adminTemp/facturas.html
+++ b/facturas_femase/mantenedorClientes/templates/adminTemp/facturas.html
@@ -1,33 +1,47 @@
-{% extends '../base.html' %} 
-{% block title %} Dashboard {% endblock %}
-{% block content %}
-
-
+{% extends '../base.html' %} {% block title %} Dashboard {% endblock %} 
+{% block content %} 
 
 {% if success %}
-
-<div class="d-flex justify-content-center">
-<div class="alert alert-success alert-dismissible fade show" role="alert">
-  Factura agregada correctamente!
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<div class="container mt-4 text-center">
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    Factura agregada correctamente!
+    <button
+      type="button"
+      class="btn-close"
+      data-bs-dismiss="alert"
+      aria-label="Close"
+    ></button>
+  </div>
 </div>
-</div>
+{% endif %} 
 
+{% if error %}
+<div class="container mt-4 text-center">
+  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    El registro ya existe
+    <button
+      type="button"
+      class="btn-close"
+      data-bs-dismiss="alert"
+      aria-label="Close"
+    ></button>
+  </div>
+</div>
 {% endif %}
- 
+
 <div class="container-fluid my-4">
   <div class="card p-4">
-    <div class="d-flex ">
+    <div class="d-flex">
       <div class="display-6 flex-fill">Facturas</div>
       <button
-      data-bs-toggle="modal"
-      data-bs-target="#exampleModal"
-      class="btn btn-primary"
-    >
-    Agregar factura
-    </button>
+        data-bs-toggle="modal"
+        data-bs-target="#exampleModal"
+        class="btn btn-primary"
+      >
+        Agregar factura
+      </button>
     </div>
-    <hr class="my-4">
+    <hr class="my-4" />
     <table class="table table-bordered text-center">
       <thead>
         <tr>
@@ -45,17 +59,35 @@
         {% for factura in facturas %}
         <tr>
           <th scope="row">{{ factura.cliente.nombreCliente }}</th>
-          <td>{{ factura.descripcion }}</td> 
-          <td>{{ factura.codFactura }}</td> 
-          <td>${{ factura.monto }}</td> 
-          <td>{{ factura.fechaInicio }}</td> 
-          <td>{{ factura.fechaFin }}</td> 
-          <td>{{ factura.estado }}</td> 
+          <td>{{ factura.descripcion }}</td>
+          <td>{{ factura.codFactura }}</td>
+          <td>${{ factura.monto }}</td>
+          <td>{{ factura.fechaInicio }}</td>
+          <td>{{ factura.fechaFin }}</td>
+          <td>{{ factura.estado }}</td>
           <td>
             <div class="d-flex gap-2 justify-content-center">
               <button class="btn btn-primary">
                 <a href="{% url 'actualizarFactura' factura.id %}">
                   <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    height="24px"
+                    viewBox="0 -960 960 960"
+                    width="24px"
+                    fill="#e8eaed"
+                  >
+                    <path
+                      d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"
+                    />
+                  </svg>
+                </a>
+              </button>
+              <button
+                class="btn btn-danger"
+                data-bs-toggle="modal"
+                data-bs-target="#deleteModal"
+              >
+                <svg
                   xmlns="http://www.w3.org/2000/svg"
                   height="24px"
                   viewBox="0 -960 960 960"
@@ -63,24 +95,42 @@
                   fill="#e8eaed"
                 >
                   <path
-                    d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"
+                    d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"
                   />
                 </svg>
-                </a>
               </button>
-              <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
-                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/></svg>
-              </button>
-              <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+              <div
+                class="modal fade"
+                id="deleteModal"
+                tabindex="-1"
+                aria-labelledby="deleteModalLabel"
+                aria-hidden="true"
+              >
                 <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h1 class="modal-title fs-5" id="exampleModalLabel">Seguro que deseas eliminar la factura</h1>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      <h1 class="modal-title fs-5" id="exampleModalLabel">
+                        Seguro que deseas eliminar la factura
+                      </h1>
+                      <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                      ></button>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
-                      <form action="{% url 'eliminarFactura' factura.id %}" method="post">
+                      <button
+                        type="button"
+                        class="btn btn-secondary"
+                        data-bs-dismiss="modal"
+                      >
+                        Volver
+                      </button>
+                      <form
+                        action="{% url 'eliminarFactura' factura.id %}"
+                        method="post"
+                      >
                         {% csrf_token %}
                         <button class="btn btn-danger">Eliminar</button>
                       </form>
@@ -94,48 +144,48 @@
         {% endfor %}
       </tbody>
     </table>
-</div>
+  </div>
 
-
-
-
-<div
-  class="modal fade"
-  id="exampleModal"
-  tabindex="-1"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog modal-lg modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">
-          Agregar factura
-        </h1>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <div class="d-flex flex-column gap-4">
-          <form method="post">
-            {% csrf_token %} 
-            <div class="row row-cols-2">
-              {% for field in form %}
-              <div class="col">
-                  {{ field.errors }}
-                  {{ field.label_tag }}: {{ field }}
+  <div
+    class="modal fade"
+    id="exampleModal"
+    tabindex="-1"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">
+            Agregar factura
+          </h1>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="modal-body">
+          <div class="d-flex flex-column gap-4">
+            <form method="post">
+              {% csrf_token %}
+              <div class="row row-cols-2">
+                {% for field in form %}
+                <div class="col">
+                  {{ field.errors }} {{ field.label_tag }}: {{ field }}
+                </div>
+                {% endfor %}
               </div>
-              {% endfor %}
-            </div>
-            <button type="submit" class="btn display-6 btn-primary mt-4">Guardar</button>
-          </form>
+              <button type="submit" class="btn display-6 btn-primary mt-4">
+                Guardar
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-{% endblock %}
+    {% endblock %}
+  </div>
+</div>
