--- a/facturas_femase/mantenedorClientes/templates/auth/login.html
+++ b/facturas_femase/mantenedorClientes/templates/auth/login.html
@@ -1,54 +1,79 @@
-{% extends "../base.html" %} 
-{% block title %} Ingresar {% endblock %} 
-{% block content %}
-
-{% if error %}
-<div class="container mt-4 text-center">
-  <div class="alert alert-danger" role="alert">
-    {{error}}
-  </div>
-</div>
-{% endif %}
-
-<div class="position-absolute top-50 start-50 translate-middle">
-  <div
-    class="card"
-    style="width: 40rem; padding-inline: 10rem; padding-block: 6rem"
-  >
-    <div class="card-body">
-      <h2 class="display-6 mb-4">Iniciar sesión</h2>
-      <form method="post" action="{% url 'login' %}">
-        {% csrf_token %}
-        <div class="d-flex flex-column">
-          <div class="mb-3">
-            <label for="username" class="form-label">Usuario</label>
-            <input
-              type="text"
-              placeholder="usuario1"
-              class="form-control"
-              id="username"
-              name="username"
-              autocomplete="off"
-              required
-            />
-          </div>
-          <div class="mb-3">
-            <label for="password" class="form-label">Contraseña</label>
-            <input
-              type="password"
-              placeholder="**********"
-              class="form-control"
-              id="password"
-              name="password"
-              required
-            />
-          </div>
-          <button type="submit" class="btn btn-outline-primary">
-            Ingresar
-          </button>
-        </div>
-      </form>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Iniciar sesión</title>
+    <style>
+      body {
+        background-color: #F8F8F8;
+      }
+    </style>
+  </head>
+  <body>
+    {% if error %}
+    <div class="container mt-4 text-center">
+      <div class="alert alert-danger" role="alert">{{error}}</div>
     </div>
-  </div>
-</div>
-{% endblock %}
+    {% endif %}
+
+    <div class="position-absolute top-50 start-50 translate-middle">
+      <div
+        class="card"
+        style="width: 40rem; padding-inline: 10rem; padding-block: 6rem"
+      >
+        <div class="card-body">
+          <h2 class="display-6 mb-4 text-center">Iniciar sesión</h2>
+          <form method="post" action="{% url 'login' %}">
+            {% csrf_token %}
+            <div class="d-flex flex-column">
+              <div class="mb-3">
+                <label for="username" class="form-label">Usuario</label>
+                <input
+                  type="text"
+                  placeholder="usuario1"
+                  class="form-control"
+                  id="username"
+                  name="username"
+                  autocomplete="off"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="password" class="form-label">Contraseña</label>
+                <input
+                  type="password"
+                  placeholder="**********"
+                  class="form-control"
+                  id="password"
+                  name="password"
+                  required
+                />
+              </div>
+              <button type="submit" class="btn btn-outline-primary">
+                Ingresar
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
