--- a/facturas_femase/mantenedorClientes/templates/adminTemp/facturas.html
+++ b/facturas_femase/mantenedorClientes/templates/adminTemp/facturas.html
@@ -3,24 +3,14 @@
 <div class="container mt-4 text-center">
   <div class="alert alert-success alert-dismissible fade show" role="alert">
     Factura agregada correctamente!
-    <button
-      type="button"
-      class="btn-close"
-      data-bs-dismiss="alert"
-      aria-label="Close"
-    ></button>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 </div>
 {% endif %} {% if error %}
 <div class="container mt-4 text-center">
   <div class="alert alert-danger alert-dismissible fade show" role="alert">
     El registro ya existe
-    <button
-      type="button"
-      class="btn-close"
-      data-bs-dismiss="alert"
-      aria-label="Close"
-    ></button>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 </div>
 {% endif %}
@@ -65,13 +55,12 @@
   <div class="card p-4 mt-4">
     <div class="d-flex">
       <div class="display-6 flex-fill">Facturas</div>
-      <button
-        data-bs-toggle="modal"
-        data-bs-target="#exampleModal"
-        class="btn btn-primary"
-      >
-        Agregar factura
-      </button>
+      <div class="d-flex gap-2">
+        <button data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-primary">
+          Agregar factura
+        </button>
+        <a class="text-white pt-2 btn btn-success" href="{% url 'subirFactura' %}">Subir factura</a>
+      </div>
     </div>
     <hr class="my-4" />
     <table class="table table-bordered text-center">
@@ -105,104 +94,58 @@
           </td>
           <td>
             <div class="d-flex gap-2 justify-content-center">
-              {% if factura.estado == "LISTO" %}
-              <button class="btn btn-success">
-                <a href="{% url 'actualizarFactura' factura.id %}">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    height="24px"
-                    viewBox="0 -960 960 960"
-                    width="24px"
-                    fill="#e8eaed"
-                  >
+              <form action="{% url 'cambioEstado' factura.id %}" method="post">
+                {% csrf_token %}
+                {% if factura.estado == "LISTO" %}
+                <button class="btn btn-success">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                    fill="#e8eaed">
                     <path
-                      d="M280-240q-100 0-170-70T40-480q0-100 70-170t170-70h400q100 0 170 70t70 170q0 100-70 170t-170 70H280Zm0-80h400q66 0 113-47t47-113q0-66-47-113t-113-47H280q-66 0-113 47t-47 113q0 66 47 113t113 47Zm400-40q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35ZM480-480Z"
-                    />
+                      d="M280-240q-100 0-170-70T40-480q0-100 70-170t170-70h400q100 0 170 70t70 170q0 100-70 170t-170 70H280Zm0-80h400q66 0 113-47t47-113q0-66-47-113t-113-47H280q-66 0-113 47t-47 113q0 66 47 113t113 47Zm400-40q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35ZM480-480Z" />
                   </svg>
-                </a>
-              </button>
-              {% endif %} {% if factura.estado == "PENDIENTE" %}
-              <button class="btn btn-danger">
-                <a href="{% url 'actualizarFactura' factura.id %}">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    height="24px"
-                    viewBox="0 -960 960 960"
-                    width="24px"
-                    fill="#e8eaed"
-                  >
+                </button>
+                {% endif %} {% if factura.estado == "PENDIENTE" %}
+                <button class="btn btn-danger">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                    fill="#e8eaed">
                     <path
-                      d="M280-240q-100 0-170-70T40-480q0-100 70-170t170-70h400q100 0 170 70t70 170q0 100-70 170t-170 70H280Zm0-80h400q66 0 113-47t47-113q0-66-47-113t-113-47H280q-66 0-113 47t-47 113q0 66 47 113t113 47Zm0-40q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35Zm200-120Z"
-                    />
+                      d="M280-240q-100 0-170-70T40-480q0-100 70-170t170-70h400q100 0 170 70t70 170q0 100-70 170t-170 70H280Zm0-80h400q66 0 113-47t47-113q0-66-47-113t-113-47H280q-66 0-113 47t-47 113q0 66 47 113t113 47Zm0-40q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35Zm200-120Z" />
                   </svg>
-                </a>
-              </button>
-              {% endif %}
+                </button>
+                {% endif %}
+              </form>
 
               <button class="btn btn-primary">
                 <a href="{% url 'actualizarFactura' factura.id %}">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    height="24px"
-                    viewBox="0 -960 960 960"
-                    width="24px"
-                    fill="#e8eaed"
-                  >
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                    fill="#e8eaed">
                     <path
-                      d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"
-                    />
+                      d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z" />
                   </svg>
                 </a>
               </button>
-              <button
-                class="btn btn-danger"
-                data-bs-toggle="modal"
-                data-bs-target="#deleteModal"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  height="24px"
-                  viewBox="0 -960 960 960"
-                  width="24px"
-                  fill="#e8eaed"
-                >
+              <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                  fill="#e8eaed">
                   <path
-                    d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"
-                  />
+                    d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z" />
                 </svg>
               </button>
-              <div
-                class="modal fade"
-                id="deleteModal"
-                tabindex="-1"
-                aria-labelledby="deleteModalLabel"
-                aria-hidden="true"
-              >
+              <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel"
+                aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content">
                     <div class="modal-header">
                       <h1 class="modal-title fs-5" id="exampleModalLabel">
                         Seguro que deseas eliminar la factura
                       </h1>
-                      <button
-                        type="button"
-                        class="btn-close"
-                        data-bs-dismiss="modal"
-                        aria-label="Close"
-                      ></button>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-footer">
-                      <button
-                        type="button"
-                        class="btn btn-secondary"
-                        data-bs-dismiss="modal"
-                      >
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Volver
                       </button>
-                      <form
-                        action="{% url 'eliminarFactura' factura.id %}"
-                        method="post"
-                      >
+                      <form action="{% url 'eliminarFactura' factura.id %}" method="post">
                         {% csrf_token %}
                         <button class="btn btn-danger">Eliminar</button>
                       </form>
@@ -218,25 +161,14 @@
     </table>
   </div>
 
-  <div
-    class="modal fade"
-    id="exampleModal"
-    tabindex="-1"
-    aria-labelledby="exampleModalLabel"
-    aria-hidden="true"
-  >
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
           <h1 class="modal-title fs-5" id="exampleModalLabel">
             Agregar factura
           </h1>
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-          ></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           <div class="d-flex flex-column gap-4">
