--- a/facturas_femase/mantenedorClientes/templates/base.html
+++ b/facturas_femase/mantenedorClientes/templates/base.html
@@ -48,6 +48,9 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
+                  <a class="dropdown-item" href="#">Facturas importadas</a>
+                </li>
+                <li>
                   <a class="dropdown-item" href="{% url 'clientes' %}">Clientes</a>
                 </li>
                 <li><a class="dropdown-item" href="#">Usuarios</a></li>
