--- a/facturas_femase/mantenedorClientes/templates/base.html
+++ b/facturas_femase/mantenedorClientes/templates/base.html
@@ -48,13 +48,16 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="#">Facturas importadas</a>
+                  <a class="dropdown-item" href="{% url 'importadas' %}">Facturas importadas</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="{% url 'clientes' %}">Clientes</a>
                 </li>
                 <li><a class="dropdown-item" href="#">Usuarios</a></li>
               </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{% url 'subirFactura' %}">Subir factura</a>
             </li>
           </ul>
           <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#logoutModal">
