--- a/facturas_femase/mantenedorClientes/templates/adminTemp/facturaImportada.html
+++ b/facturas_femase/mantenedorClientes/templates/adminTemp/facturaImportada.html
@@ -16,22 +16,18 @@
                 </tr>
             </thead>
             <tbody>
-                {% for factura in datos %}
-                {% for importada in factura.importadas %}
+                {% for importada in importadas %}
                 <tr>
                     <th scope="row">{{ importada.numDocumento }}</th>
                     <td>{{ importada.descripcion }}</td>
                     <td>${{ importada.abonos }}</td>
                     <td>
-                        {% for filtro in factura.filtro %}
-                        {% if filtro.monto == importada.abonos %}
+                        {% if importada.coincide == "si" %}
                         <a href="{% url 'aprobarRechazar' importada.abonos %}"
                             class="btn btn-outline-primary btn-sm">Ver coincidencias</a>
                         {% endif%}
-                        {% endfor %}
                     </td>
                 </tr>
-                {% endfor %}
                 {% endfor %}
             </tbody>
         </table>
