--- a/facturas_femase/mantenedorClientes/templates/adminTemp/facturaImportada.html
+++ b/facturas_femase/mantenedorClientes/templates/adminTemp/facturaImportada.html
@@ -12,6 +12,7 @@
                     <th scope="col">Numero documento</th>
                     <th scope="col">Descripción</th>
                     <th scope="col">Monto</th>
+                    <th scope="col">Servicio</th>
                     <th scope="col">Acciones</th>
                 </tr>
             </thead>
@@ -21,6 +22,7 @@
                     <th scope="row">{{ importada.numDocumento }}</th>
                     <td>{{ importada.descripcion }}</td>
                     <td>${{ importada.abonos }}</td>
+                    <td>{{ importada.nombreServicio }}</td>
                     <td>
                         {% if importada.coincide == "si" %}
                         <a href="{% url 'aprobarRechazar' importada.abonos importada.numDocumento %}"
