--- a/facturas_femase/mantenedorClientes/templates/base.html
+++ b/facturas_femase/mantenedorClientes/templates/base.html
@@ -17,7 +17,7 @@
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-primary py-3 text-white" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg sticky-top bg-primary py-3 text-white" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'facturas' %}">FEMASE</a>
         <button
@@ -49,6 +49,9 @@
               <ul class="dropdown-menu">
                 <li>
                   <a class="dropdown-item" href="{% url 'importadas' %}">Facturas importadas</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'servicios' %}">Servicios</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="{% url 'clientes' %}">Clientes</a>
