--- a/facturas_femase/mantenedorClientes/templates/adminTemp/servicios.html
+++ b/facturas_femase/mantenedorClientes/templates/adminTemp/servicios.html
@@ -34,7 +34,7 @@
           <td>
             <div class="d-flex gap-2 justify-content-center">
               <button class="btn btn-primary">
-                <a href="#">
+                <a href="{% url 'actualizarServicio' servicio.id %}">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     height="24px"
