--- a/facturas_femase/mantenedorClientes/templates/base.html
+++ b/facturas_femase/mantenedorClientes/templates/base.html
@@ -56,7 +56,7 @@
                 <li>
                   <a class="dropdown-item" href="{% url 'clientes' %}">Clientes</a>
                 </li>
-                <li><a class="dropdown-item" href="#">Usuarios</a></li>
+                <li><a class="dropdown-item" href="{% url 'usuarios' %}">Usuarios</a></li>
               </ul>
             </li>
             <li class="nav-item">
